# monday_morning_moral

./: .gitignore  README.md  checkpoint.py  generate.py  main.py  pyproject.toml  train.py  upload_to_hf.py
data/: dataloader.py  dataset.py  tokenization.py
models/: embeddings.py  feed_forward.py  gpt2.py  multi_head_attention.py  transformer.py
tests/: test_dataset_and_dataloader.py  test_embeddings.py
utils/: config.py
