[project]
name = "monday-morning-moral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "huggingface_hub>=0.30.0",
    "ipykernel>=7.1.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
]
